src/App.css
/* 폰트설정 */
@font-face {
  font-family: 'simpleFont';
  src: url('./font/PretendardVariable.woff2') format('truetype');
}
p {
  font-family: 'simpleFont';
}
.cursorPointer {
  cursor: pointer;
}
/* nav바 */
.NavbarContainer {
  display: grid;
  grid-auto-flow: column;
  grid-template-columns: 1fr;
}
.myNavbar {
  height: 50px;
}

/* nav바 아이템 간격조정 */
.navItem {
  margin-left: 24px;
}
.rightNav {
  font-weight: bold !important;
  color: black !important;
  /* TODO:important 안 쓰는 방법을 생각해보자 */
}
.start {
  opacity: 0;
  transform: translateY(0);
}
.end {
  opacity: 1;
  transform: translateY(-50px);
  transition: all 1s;
}
.black-bg {
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: 5;
  background: rgba(0, 0, 0, 0.5);
  padding: 30px;
}
.white-bg {
  background: white;
  width: 22%;
  height: 44%;
  padding: 30px;
  border-radius: 10px;
  margin: auto;
  margin-top: 240px;
}
.white-bg h4 {
  text-align: center;
}
.white-bg-box {
  margin: auto;
  margin-top: 20px;
  width: 90%;
  height: 20%;
  border: 1px solid #b7b7b7;
  border-radius: 4px;
  padding: 20px;
}
.white-bg-img {
  width: 70%;
  height: 32%;
  margin: auto;
  display: block;
}
/* 메인 소개*/
.mainIntro {
  width: 100%;
  height: 850px;
  background-color: #f2f2f2;
  text-align: center;
  padding: 1px;
  padding-top: 50px;
}
.mainIntroText {
  font-size: 60px;
  font-weight: 900;
  margin-top: 150px;
}

.mainAnimation {
  transition: all 3s;
  opacity: 0;
  width: 60%;
  margin: auto;
}

.mainIntroLeft {
  float: left;
  text-align: left;
}
.secondIntro {
  background-color: white;
}
/* 시작하기 버튼 */
.startBtn {
  height: 50px;
  width: 150px;
  border-radius: 40px;
  margin-top: 50px;
}





.projectBox p {
  font-size: 12px;
}


/* 로그인.js  */
.loginBox {
  padding: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.loginTxt {
  font-size: 40px;
}

.input-container .form-control {
  width: 100%;
  max-width: none; /* 부트스트랩의 최대 너비 설정 무시 */
  padding: 10px; /* 내부 여백 설정 */
  font-size: 16px; /* 폰트 크기 설정 */
  min-width: 300px; /* 입력 칸의 최소 가로 길이 설정 */
}

.input-container {
  margin-bottom: 1rem;
}

@media (max-width: 11768px) {
  .input-container .form-control {
    max-width: 100%; /* 작은 화면에서 최대 너비는 100% */
  }
}
.signupAndFindPwd {
  margin-top: 30px;
}
.main-project {
  width: 100%;
  background-color: rgb(186, 103, 39);
}


.inputTitle {
  border: none;
  outline: none;
  width: 100%;
}
.projectWriteVw {
  width: 100vw;
}
.projectWriteMainContainer {
  width: 100%;
  padding: 50px;
}
.projectWriteMainCenter {
  width: 50%;
  margin-left: 16%;
}
.projectWriteTopInfo {
  padding-top: 40px;
}
.projectWriteTopInfoBox {
  width: 50%;
  display: inline-block;
  text-align: left;
}

.teamApply {
  float: right;
  border: none;
  border-radius: 10%;
  background-color: #f27474;
  color: white;
  height: 40px;
  width: 100px;
  font-weight: bold;
  margin-top: 20px;
}
.projectWriteTopInfo {
  text-align: center;
}
.btngroup {
  float: right;
  margin-top: 40px;
}
.introduce {
  height: 200px;
}

.projectWriteMainCenter ::placeholder {
  color: grey;
  opacity: 0.7;
}

input[type='checkbox'] {
  display: none;
}

input[type='checkbox'] + label::before {
  content: '';
  display: inline-block;
  width: 20px;
  height: 20px;
  position: relative;
  border: solid 2px #282c34;
  cursor: pointer;
  border-radius: 4px;
  vertical-align: middle;
}
input[type='checkbox']:checked + label::before {
  background-image: url('img/checkbox.svg');
  background-repeat: no-repeat;
}
input[type='checkbox'] + label > span {
  vertical-align: middle;
  padding-left: 5px;
}
.checkboxMargin {
  margin-left: 20px;
}

.myProjectbox {
  width: 70%;
  margin: auto;
  border: solid 1px rgb(168, 168, 168);
  border-radius: 50px;
  padding: 3dvb;
  display: flow-root;
  margin-top: 50px;
  z-index: 10;
}
.myProjectText {
  position: absolute;
  top: 11%;
  left: 18%;
  /* transform: translate(-50%, -50%); */
  font-size: 30px;
  padding-top: 10px;
}


.FeatureImo {
  font-size: 30px;
}

.fc-direction-ltr {
  width: 46vw;
  height: 82vh;
}

.fc-daygrid-day-frame {
  overflow: hidden;
}

/* .fc-event-title.fc-sticky{
  white-space: normal;
} */
.fc-daygrid-day-number {
  text-decoration: none;
  color: black;
}
.fc-col-header-cell-cushion {
  text-decoration: none;
  color: black;
}
.fc-toolbar-chunk {
  font-size: 10px;

}
.fc-toolbar-title {
  font-weight: bold;
}
/* todo 크기변경  */
.calendarTodoToday .fc-direction-ltr {
  height: 40vh !important;
  width: 15vw !important;
}
/*todo 요일 글자 */
.fc-list-day-text {
  color: black;
  text-decoration: none;
}
.fc-myCustomButton-button {
  margin-left: 10px !important; 
  background-color: rgb(81, 81, 238) !important; 
  border-radius: 5px !important;
}

